--- a/project-4/about-us-kicks-for-splash.html
+++ b/project-4/about-us-kicks-for-splash.html
@@ -20,16 +20,17 @@
       };
     </script>
 </head>
-<body>
-    <div class="nav-row">
-        <div class="nav-logo">
-            <a href="./kicks-for-splash.html" class="home-button"><img src="./B_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
+<body id="top">
+    <div class="row" id="sticky-nav">
+        <div id="nav-logo">
+            <a href="./kicks-for-splash.html" class="home-button"><img src="./images/b_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
         </div>
-        <div class="nav-bar">
+        <div class="header"></div>
+        <div id="nav-bar">
             <button id="toggle-nav"><span class="material-symbols-outlined">menu</span></button>
             <nav id="primary-nav">
                 <ul>
-                    <li class="about-sel">About Us</li>
+                    <li><a href="./about-us-kicks-for-splash.html" class="about-nav-button">About Us</a></li>
                     <li><a href="./gallery-kicks-for-splash.html" class="gallery-nav-button">Gallery</a></li>
                     <li><a href="./order-kicks-for-splash.html" class="order-nav-button">Order</a></li>
                     <li><a href="./dropoff-pickup-kicks-for-splash.html" class="dropoff-nav-button">Dropoff/Pickup</a></li>
@@ -38,5 +39,48 @@
             </nav>
         </div>
     </div>
+    <div class="header"></div>
+    <main>
+        <div class="row-box">
+            <div class="row">
+                <div class="col-7">
+                    <img class="about-pics" src="./images/about-pic-1.jpeg" alt="girl painting shoe">
+                </div>
+                <div class="col-5">
+                    <h2 class="about-headings">Our Story</h2>
+                    <p class="about-body-copy">This business strives to instill a sense of joy and togetherness in our customers as we deliver quality shoe designs and excellent service.</p>
+                </div>
+            </div>
+            <div class="row-b">
+                <div class="col-5">
+                    <h2 class="about-headings">Our Mission</h2>
+                    <p class="about-body-copy">This business strives to instill a sense of joy and togetherness in our customers as we deliver quality shoe designs and excellent service.</p>
+                </div>
+                <div class="col-7">
+                    <img class="about-pics" src="./images/about-pic-2.jpeg" alt="girl painting shoe">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-7">
+                    <img class="about-pics" src="./images/about-pic-3.jpeg" alt="girl painting shoe">
+                </div>
+                <div class="col-5">
+                    <h2 class="about-headings">Our Owner</h2>
+                    <p class="about-body-copy">This business strives to instill a sense of joy and togetherness in our customers as we deliver quality shoe designs and excellent service.</p>
+                </div>
+            </div>
+            <div class="row-b">
+                <div class="col-5">
+                    <h2 class="about-headings">Our Team</h2>
+                    <p class="about-body-copy">This business strives to instill a sense of joy and togetherness in our customers as we deliver quality shoe designs and excellent service.</p>
+                </div>
+                <div class="col-7">
+                    <img class="about-pics" src="./images/about-pic-4.jpeg" alt="girl painting shoe">
+                </div>
+            </div>
+        </div>
+    </main>
+    <div class="bottom-nav-bar"><a href="#top">Back to Top ↑</a></div>
 </body>
 </html>
+<li class="about-sel">About Us</li>
