--- a/project-4/dropoff-pickup-kicks-for-splash.html
+++ b/project-4/dropoff-pickup-kicks-for-splash.html
@@ -20,12 +20,13 @@
       };
     </script>
 </head>
-<body>
-    <div class="nav-row">
-        <div class="nav-logo">
-            <a href="./kicks-for-splash.html" class="home-button"><img src="./B_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
+<body id="top">
+    <div class="row" id="sticky-nav">
+        <div id="nav-logo">
+            <a href="./kicks-for-splash.html" class="home-button"><img src="./images/b_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
         </div>
-        <div class="nav-bar">
+        <div class="header"></div>
+        <div id="nav-bar">
             <button id="toggle-nav"><span class="material-symbols-outlined">menu</span></button>
             <nav id="primary-nav">
                 <ul>
@@ -38,5 +39,43 @@
             </nav>
         </div>
     </div>
-</body>
+    <div class="header"></div>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-4">
+                    Column 4
+                </div>
+                <div class="col-8">
+                    Column 8
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8">
+                    Column 8
+                </div>
+                <div class="col-4">
+                    Column 4
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    Column 4
+                </div>
+                <div class="col-8">
+                    Column 8
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    Column 6
+                </div>
+                <div class="col-6">
+                    Column 6
+                </div>
+            </div>
+        </div>
+    </main>
+    <div class="bottom-nav-bar"><a href="#top">Back to Top ↑</a></div>
+    <div class="footer"></div>
 </html>
