--- a/project-4/gallery-kicks-for-splash.html
+++ b/project-4/gallery-kicks-for-splash.html
@@ -20,12 +20,13 @@
       };
     </script>
 </head>
-<body>
-    <div class="nav-row">
-        <div class="nav-logo">
-            <a href="./kicks-for-splash.html" class="home-button"><img src="./B_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
+<body id="top">
+    <div class="row" id="sticky-nav">
+        <div id="nav-logo">
+            <a href="./kicks-for-splash.html" class="home-button"><img src="./images/b_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
         </div>
-        <div class="nav-bar">
+        <div class="header"></div>
+        <div id="nav-bar">
             <button id="toggle-nav"><span class="material-symbols-outlined">menu</span></button>
             <nav id="primary-nav">
                 <ul>
@@ -38,15 +39,75 @@
             </nav>
         </div>
     </div>
-    <div class="grid">
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-1.jpeg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-2.jpeg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-3.jpeg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-4.jpg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-5.jpeg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-6.jpeg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-7.jpeg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-8.jpg"></div>
-        <div class="module"><img class="gallery-pic" src="./gallery-pic-9.jpeg"></div>
+    <div class="header"></div>
+    <main>
+        <div class="grid">
+            <div class="module">
+                <div class="module-text">
+                    <h2>The Sun and Moon</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-1.jpeg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Grunge Florals</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-2.jpeg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Spring Patterns</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-3.jpeg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Cool Flames</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-4.jpg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Spiral Tie-Dye</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-5.jpeg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Abstract Roses</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-6.jpeg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Strawberry Donut</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-7.jpeg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Candylane Festivities</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-8.jpg">
+            </div>
+            <div class="module">
+                <div class="module-text">
+                    <h2>Paint Splatters</h2>
+                    <p class="gallery-body-copy">A custom design feturing a black shoe with a sun design and a yellow shoe with a moon.  Both shoes were painted with fabric paint and the details were created with fabric markers.  Created by one of designers with suggestions from the customer.</p>
+                </div>
+                <img class="gallery-pic" src="./images/gallery-pic-9.jpeg">
+            </div>
+        </div>
+    </main>
+    <div class="bottom-nav-bar"><a href="#top">Back to Top ↑</a></div>
+    <div class="footer"></div>
 </body>
 </html>
