--- a/project-4/kicks-for-splash.html
+++ b/project-4/kicks-for-splash.html
@@ -20,12 +20,13 @@
       };
     </script>
   </head>
-<body>
-    <div class="nav-row">
-        <div class="nav-logo">
-            <a href="./kicks-for-splash.html" class="home-button"><img src="./B_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
+<body id="top">
+    <div class="row" id="sticky-nav">
+        <div id="nav-logo">
+            <a href="./kicks-for-splash.html" class="home-button"><img src="./images/b_Knudsen_Small_Biz_Marks-01.png" alt="kicks for splash logo"></a>
         </div>
-        <div class="nav-bar">
+        <div class="header"></div>
+        <div id="nav-bar">
             <button id="toggle-nav"><span class="material-symbols-outlined">menu</span></button>
             <nav id="primary-nav">
                 <ul>
@@ -38,39 +39,18 @@
             </nav>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                Column 4
-            </div>
-            <div class="col-8">
-                Column 8
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8">
-                Column 8
-            </div>
-            <div class="col-4">
-                Column 4
+    <div class="header"></div>
+    <main class="home">
+        <div class="home-text-box">
+            <div class="home-text">
+                <p class="home-text-sm">Custom Shoe Painting by</p>
+                <p class="home-text-bg">Kicks for Splash</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4">
-                Column 4
-            </div>
-            <div class="col-8">
-                Column 8
-            </div>
+        <div>
+            <img class="home-pic" src="./images/home-pic-1.jpeg" alt="shoe painting">
         </div>
-        <div class="row">
-            <div class="col-6">
-                Column 6
-            </div>
-            <div class="col-6">
-                Column 6
-            </div>
-        </div>
-    </div>
+    </main>
+    <div class="bottom-nav-bar"><a href="#top">Back to Top ↑</a></div>
 </body>
 </html>
