--- a/project-4/kicks-for-splash.html
+++ b/project-4/kicks-for-splash.html
@@ -46,6 +46,7 @@
                 <p class="home-text-sm">Custom Shoe Painting by</p>
                 <p class="home-text-bg">Kicks for Splash</p>
             </div>
+            <a href="./order-kicks-for-splash.html" class="order-nav-button">Order</a>
         </div>
         <div>
             <img class="home-pic" src="./images/home-pic-1.jpeg" alt="shoe painting">
