--- a/project-4/order-kicks-for-splash.html
+++ b/project-4/order-kicks-for-splash.html
@@ -18,6 +18,7 @@
 
         });
       };
+      $('.carousel').carousel()
     </script>
 </head>
 <body id="top">
@@ -41,18 +42,94 @@
     </div>
     <div class="header"></div>
     <main>
-        <form>
-            <label for="firstname">First Name</label>
-            <input id="firstname" name="firstname" type="text">
-            <label for="email">Enter your email</label>
-            <input id="email" type="email" required></imput>
-            <input type="submit" value="Enter my name"></imput>
-            <select name="cars" id="cars">
-                <option value="red">red</option>
-                <option value="yellow">yellow</option>
-                <option value="blue">blue</option>
-            </select>
-        </form>
+        <div class="row-b">
+            <div class="col-6">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./images/gallery-pic-1.jpeg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-2.jpeg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-3.jpeg" alt="Third slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>  
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-4.jpg" alt="Fourth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>  
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-5.jpeg" alt="Fifth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>  
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-6.jpeg" alt="Sixth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>  
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-7.jpeg" alt="Seventh slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>  
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-8.jpg" alt="Eighth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>  
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./images/gallery-pic-9.jpeg" alt="Ninth slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>...</h5>
+                            </div>  
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="col-6">
+                <form>
+                    <label for="firstname">First Name</label>
+                    <input id="firstname" name="firstname" type="text">
+                    <label for="email">Enter your email</label>
+                    <input id="email" type="email" required></imput>
+                    <input type="submit" value="Enter my name"></imput>
+                    <select name="cars" id="cars">
+                        <option value="red">red</option>
+                        <option value="yellow">yellow</option>
+                        <option value="blue">blue</option>
+                    </select>
+                </form>
+            </div>
+        </div>
     </main>
     <div class="bottom-nav-bar"><a href="#top">Back to Top ↑</a></div>
     <div class="footer"></div>
