--- a/project-4/order-kicks-for-splash.html
+++ b/project-4/order-kicks-for-splash.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Order - Kicks for Splash</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-    <link rel="stylesheet" href="./stylesheet-kicks-for-splash.css">
+    <link rel="stylesheet" href="./stylesheet-kicks-for-splash.css">    
     <script>
        window.onload = function() {
       let toggleNav = document.getElementById('toggle-nav');
@@ -20,6 +20,7 @@
       };
       $('.carousel').carousel()
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body id="top">
     <div class="row" id="sticky-nav">
@@ -40,80 +41,83 @@
             </nav>
         </div>
     </div>
-    <div class="header"></div>
     <main>
         <div class="row-b">
             <div class="col-6">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="./images/gallery-pic-1.jpeg" alt="First slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-2.jpeg" alt="Second slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-3.jpeg" alt="Third slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>  
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-4.jpg" alt="Fourth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>  
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-5.jpeg" alt="Fifth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>  
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-6.jpeg" alt="Sixth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>  
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-7.jpeg" alt="Seventh slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>  
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-8.jpg" alt="Eighth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>  
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="./images/gallery-pic-9.jpeg" alt="Ninth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>...</h5>
-                            </div>  
-                        </div>
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 3"></button>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                    </a>
-                </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="./images/gallery-pic-1.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>The Sun and Moon</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gallery-pic-2.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Grunge Florals</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gallery-pic-3.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Spring Patterns</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gallery-pic-4.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Cool Flames</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gallery-pic-5.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Spiral Tie-Dye</h5>
+                        </div>
+                      </div><div class="carousel-item">
+                        <img src="./images/gallery-pic-6.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Abstract Roses</h5>
+                        </div>
+                      </div><div class="carousel-item">
+                        <img src="./images/gallery-pic-7.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Strawberry Donut</h5>
+                        </div>
+                      </div><div class="carousel-item">
+                        <img src="./images/gallery-pic-8.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Candylane Festivities</h5>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gallery-pic-9.jpeg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Paint Splatters</h5>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
             </div>
             <div class="col-6">
                 <form>
